--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [6.x, 8.x, 10.x, 12.x]
+                node-version: [6.x, 8.x, 10.x, 12.x, 14.x, 16.x]
 
         steps:
 
